--- a/fxs-platform-web/src/main/resources/static/laywer_mycasedetail.html
+++ b/fxs-platform-web/src/main/resources/static/laywer_mycasedetail.html
@@ -199,7 +199,7 @@
                  </div>
                  
                 </ul>
-               <ul >
+               <ul class="lawyer2button">
                 <div class="row">
                   <div class="col-md-12 col-sm-12 btnNext btnSearch caseTwoBtn">
                     <button type="button" class="btn btn-primary btn-lg" onclick="#'">按键信息反馈</button>
