修改页面内容和样式

--- a/fxs-platform-web/src/main/resources/static/new/index.html
+++ b/fxs-platform-web/src/main/resources/static/new/index.html
@@ -81,7 +81,7 @@
 
         <div class="row searchBox">
           <div class="col-xs-12 col-md-5">
-            <input value="" placeholder="搜索案例..." class="form-control homepage-search square-select margin-top-2" >
+            <input value="" placeholder="使用申小法进行智能搜索，或者输入关键词" class="form-control homepage-search square-select margin-top-2" >
             <button type="submit" class="btn btn-default searchNow">开始搜索</button>
           </div>
 
